<resources>
    <string name="app_name">Rhythmic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Imrul Anwar</string>
    <string name="nav_header_subtitle">© Imrul Anwar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="logo">Logo</string>
    <string name="recent">Recent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="linked_in">Linked In</string>
    <string name="git_hub">Git Hub</string>
    <string name="socials">Socials</string>
    <string name="navigate">Navigate</string>
</resources>