<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/navigate">
            <menu>
                <item
                        android:title="@string/home"
                        android:id="@+id/nav_home"
                        android:icon="@drawable/ic_home" />
                <item
                        android:title="@string/search"
                        android:id="@+id/nav_search"
                        android:icon="@drawable/ic_search" />
                <item
                        android:title="@string/library"
                        android:id="@+id/nav_library"
                        android:icon="@drawable/ic_library" />
                <item
                        android:title="@string/download"
                        android:id="@+id/nav_download"
                        android:icon="@drawable/ic_download_nav" />
            </menu>
        </item>

        <item android:title="@string/socials">
            <menu>
                <item
                        android:title="@string/linked_in"
                        android:id="@+id/nav_linkedin"
                        android:icon="@drawable/ic_linked_in" />
                <item
                        android:title="@string/git_hub"
                        android:id="@+id/nav_github"
                        android:icon="@drawable/ic_git_hub" />
            </menu>
        </item>
    </group>
</menu>